--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
-cover_db
-META.yml
-Makefile
-blib
+MANIFEST*
+META.*
+MYMETA.*
+!Makefile.PL
+/*blib
 inc
-pm_to_blib
-MANIFEST
-Makefile.old
-nytprof.out
-MANIFEST.bak
-*.sw[po]
+.*
+.gitignore
+perlbal.pid
